--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -1,5 +1,26 @@
+@font-face {
+    font-family: Roboto Regular;
+    src: url(./assets/fonts/Roboto/Roboto-Regular.ttf);
+}
+
+@font-face {
+    font-family: Roboto Medium;
+    src: url(./assets/fonts/Roboto/Roboto-Medium.ttf);
+}
+
+@font-face {
+    font-family: Roboto Bold;
+    src: url(./assets/fonts/Roboto/Roboto-Bold.ttf);
+}
+
+@font-face {
+    font-family: Montserrat Medium;
+    src: url(./assets/fonts/Montserrat/Montserrat-Medium.ttf);
+}
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: Roboto Bold, sans-serif;
 }
