--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -18,10 +18,15 @@
     src: url(./assets/fonts/Montserrat/Montserrat-Medium.ttf);
 }
 
+:root {
+    font-size: 16px;
+}
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    list-style: none;
 }
 
 body {
