--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -14,6 +14,11 @@
 }
 
 @font-face {
+    font-family: Montserrat Light;
+    src: url(./assets/fonts/Montserrat/Montserrat-Light.ttf);
+}
+
+@font-face {
     font-family: Montserrat Medium;
     src: url(./assets/fonts/Montserrat/Montserrat-Medium.ttf);
 }
