--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -1,33 +1,29 @@
 @font-face {
-    font-family: Roboto Regular;
+    font-family: 'Roboto Regular';
     src: url(../assets/fonts/Roboto/Roboto-Regular.ttf);
 }
 
 @font-face {
-    font-family: Roboto Medium;
+    font-family: 'Roboto Medium';
     src: url(../assets/fonts/Roboto/Roboto-Medium.ttf);
 }
 
 @font-face {
-    font-family: Roboto Bold;
+    font-family: 'Roboto Bold';
     src: url(../assets/fonts/Roboto/Roboto-Bold.ttf);
 }
 
 @font-face {
-    font-family: Roboto Black;
+    font-family: 'Roboto Black';
     src: url(../assets/fonts/Roboto/Roboto-Black.ttf);
 }
 
 @font-face {
-    font-family: Montserrat Light;
+    font-family: 'Montserrat Light';
     src: url(../assets/fonts/Montserrat/Montserrat-Light.ttf);
 }
 
 @font-face {
-    font-family: Montserrat Medium;
+    font-family: 'Montserrat Medium';
     src: url(../assets/fonts/Montserrat/Montserrat-Medium.ttf);
-}
-
-:root {
-    font-size: 16px;
 }
